@@ -1,0 +1,2 @@
+dist_bin_SCRIPTS = \
+	makefits
