@@ -3,6 +3,9 @@ Version 2.4
 * Require difxio 2.5
 * Fix numbering of FITS Source IDs
 * Better handle transitional scans
+* don't use bcopy -- use memcpy instead.
+* fix sense of phase for LSB sniffer output data
+* add makefits wrapper program
 
 Version 2.3
 * Support for writing FITS files larger than 2 GiB
